[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/battle/battlers/battler.gd" type="Script" id=1]
[ext_resource path="res://fonts/COMIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/battle/battlers/target.png" type="Texture" id=3]
[ext_resource path="res://scenes/battle/battlers/blank.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[node name="Battler" type="AnimatedSprite"]
script = ExtResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_right = 80.0
margin_bottom = 10.0
rect_min_size = Vector2( 80, 10 )
custom_fonts/font = SubResource( 1 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "XX / XX"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Target" type="TextureButton" parent="."]
margin_right = 32.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Target" to="." method="_on_target_pressed"]
